workloads/litmus-chaoscarnival/chaoscarnival-prod.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prod-chaoscarnival
  name: prod-chaoscarnival
  namespace: litmuschaos
  annotations:
    fluxcd.io/automated: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prod-chaoscarnival
  template:
    metadata:
      labels:
        app: prod-chaoscarnival
    spec:
      containers:
      - name: prod-chaoscarnival
        image: mayadata/www-chaoscarnival-io:ci-XXXXXX
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
      imagePullSecrets:
      - name: mayadatasecret2
