workloads/litmus-chaoscarnival/chaoscarnival-staging-live.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: staging-live-chaoscarnival
  name: staging-live-chaoscarnival
  namespace: litmuschaos
  annotations:
    fluxcd.io/automated: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: staging-live-chaoscarnival
  template:
    metadata:
      labels:
        app: staging-live-chaoscarnival
    spec:
      containers:
      - name: staging-live-chaoscarnival
        image: mayadata/www-staging-live-chaoscarnival-io:ci-daf533
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
      imagePullSecrets:
      - name: mayadatasecret2
