workloads/litmus-chaoscarnival/chaoscarnival-prod-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prod-chaoscarnival
  name: prod-chaoscarnival-service
  namespace: litmuschaos
spec:
  ports:
  - name: prod-chaoscarnival
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: prod-chaoscarnival
